# zaplex

./: AGENTS.md  Cargo.toml
.github/: STAKEHOLDERS  engineering-standards.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_ssh_tmux.yml  04_ssh_legacy.yml  config.yml
.github/workflows/: build-remote-server.yml  claude.yml  no-new-cjk.yml  openwarp_release.yml  pr-check.yml  test-dispatch.yml  test-dmg.yml  zap_release.yml
app/: Cargo.toml  build.rs  i18n.toml
app/src/: app_menus.rs  app_state.rs  coding_panel_enablement_state.rs  crash_recovery.rs  debug_dump.rs  font_fallback.rs  i18n.rs  keyboard.rs  lib.rs  local_managed_secrets.rs  menu.rs  palette.rs  preview_config_migration.rs  profiling.rs  resource_limits.rs  root_view.rs  server_time.rs  tab.rs  voltron.rs  warp_managed_paths_watcher.rs  wasm_nux_dialog.rs
crates/http_client/: Cargo.toml
crates/warp_ssh_manager/: Cargo.toml
crates/zaplex_cockpit/: Cargo.toml
crates/zaplex_cockpit/src/: claude.rs  claude_tests.rs  codex.rs  codex_tests.rs  format.rs  format_tests.rs  lib.rs  pricing.rs  pricing_tests.rs  types.rs  windows.rs  windows_tests.rs
crates/zaplex_cockpit/tests/: snapshot.rs
crates/zaplex_remote_session/: Cargo.toml
crates/zaplex_remote_session/src/: client.rs  lib.rs  server.rs  types.rs  types_tests.rs
crates/zaplex_remote_session/src/server/: output_ring.rs  output_ring_tests.rs
docs/: zaplex-concept.md
script/: analyze-prompt-cache.ps1  check-no-new-cjk  deploy_remote_server  run  setup  setup-merge-drivers.sh  update_plist
script/linux/: bundle  (+3 more)
(+885 files in other folders)
